shimmer loading on home page added

--- a/app/src/main/res/layout/item_home_doctor_list_shimmer.xml
+++ b/app/src/main/res/layout/item_home_doctor_list_shimmer.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        app:shapeAppearance="square">
+        android:layout_marginTop="5dp">
 
         <ImageView
             android:id="@+id/doctor_image"
