--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -98,6 +98,23 @@
                     android:layout_marginEnd="30dp"
                     android:textSize="15sp"/>
             </LinearLayout>
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_home_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <include layout = "@layout/item_home_category_list_shimmer"/>
+                    <include layout = "@layout/item_home_category_list_shimmer"/>
+                    <include layout = "@layout/item_home_category_list_shimmer"/>
+                    <include layout = "@layout/item_home_category_list_shimmer"/>
+                    <include layout = "@layout/item_home_category_list_shimmer"/>
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_category"
                 android:layout_width="match_parent"
@@ -132,6 +149,24 @@
                     android:layout_marginEnd="30dp"
                     android:textSize="15sp"/>
             </LinearLayout>
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_home_doctor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <include layout="@layout/item_home_doctor_list_shimmer"/>
+                    <include layout="@layout/item_home_doctor_list_shimmer"/>
+                    <include layout="@layout/item_home_doctor_list_shimmer"/>
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_doctor"
                 android:layout_width="match_parent"
