--- a/app/src/main/res/layout/item_home_category_list_shimmer.xml
+++ b/app/src/main/res/layout/item_home_category_list_shimmer.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="250dp"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/category"
         android:layout_width="match_parent"
