--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -26,7 +26,23 @@
         <View
             android:background="@color/light_blue_700"
             android:layout_width="wrap_content"
-            android:layout_height="3dp"/>
+            android:layout_height="1dp"/>
+
+        <ImageView
+            android:id="@+id/profile_pic"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/profile_picture" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            android:layout_marginTop="5dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/name_instructions"
@@ -165,6 +181,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="50dp"
             android:backgroundTint="@android:color/holo_green_light"
             android:textColor="@color/white"
             android:text="@string/sign_out"/>
